--- a/assets/style.css
+++ b/assets/style.css
@@ -63,7 +63,7 @@ body {
     margin-left: 20px;
 }
 
-.horiseon-image {
-    width: 50px;
-    height: 50px;
+# horiseon-image {
+    max-width: 100%;
+    height: auto;
 }
